--- a/ShoppingApp/package.json
+++ b/ShoppingApp/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import":"node backend/insertData.js"
+    "data:import": "node backend/insertData.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.8",
     "mongoose": "^5.13.2"
   },
   "devDependencies": {
